# Pianta-Arredo-Core

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PACKAGE-A-MANIFEST.md  PACKAGE-B-MANIFEST.md  PACKAGE-C-MANIFEST.md  PACKAGE-D-MANIFEST.md  PACKAGE-E-MANIFEST.md  PROJECT_PRINCIPLES.md  README.md  RELEASE-0.1-MANIFEST.md  RELEASE-0.1-NOTES.md  RELEASE-0.2-GENERATION-REPORT.md  RELEASE-0.2-MANIFEST.md  RELEASE-0.2-NOTES.md  RELEASE-0.2-PACKAGE-A-MANIFEST.md  RELEASE-0.2-PACKAGE-B-MANIFEST.md  RELEASE-0.2-PACKAGE-C-MANIFEST.md  RELEASE-0.2-PACKAGE-D-MANIFEST.md  RELEASE-0.2-PACKAGE-E-MANIFEST.md  RELEASE-0.3-GENERATED-FILES.md  RELEASE-0.3-GENERATION-REPORT.md  RELEASE-0.3-MANIFEST.md  RELEASE-0.3-NOTES.md  RELEASE-0.4-GENERATED-FILES.md  RELEASE-0.4-GENERATION-REPORT.md  RELEASE-0.4-MANIFEST.md  RELEASE-0.4-NOTES.md  RELEASE-0.5-GENERATED-FILES.md  RELEASE-0.5-GENERATION-REPORT.md  RELEASE-0.5-MANIFEST.md  RELEASE-0.5-NOTES.md  RELEASE-0.6-GENERATION-REPORT.md  RELEASE-0.6-MANIFEST.md  RELEASE-0.6-NOTES.md  RELEASE-0.7-GENERATION-REPORT.md  (+15 more)
implementation/python/: README.md  pyproject.toml
implementation/python/tests/: test_architecture_dependencies.py  test_capability_registry.py  test_events_and_plugins.py  test_geojson_interoperability.py  test_geometry_algorithms.py  test_geometry_service.py  test_geometry_validation_rules.py  test_json_project_repository.py  test_project_service.py  test_public_api.py  test_reference_workflow.py  test_runtime_hardening.py  test_spatial_clearance.py  test_validation_service.py
(+216 files in other folders)
